kubectl/converter-service.yml
apiVersion: v1
kind: Service
metadata:
  name: converter-clusterip
spec:
  selector:
    components: converter-api
  ports:
    - protocol: TCP
      port: 3001
  type: ClusterIP
